:notes: fix header title too wide problem; author data

--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,12 @@
     max-height:460px;
     overflow:hidden;
     background:#eee;
-    
+
     > div {
         max-height: 480px;
         line-height: 0;
     }
-    
+
     .image {
         width: 100%;
         top: 0;
@@ -77,41 +77,41 @@
             transition:0.2s all ease;
             line-height:0;
             text-align:center;
-        
+
             &:hover {
                 transition:0.2s all ease;
                 background:#fff;
-                
+
                 .icon-rss {
                     background-position:1px -11px;
                 }
-                
+
                 .icon-twitter {
                     background-position:0px -15px;
                 }
-                
+
                 .icon-facebook {
                      background-position:0px -14px;
                  }
             }
         }
     }
-    
+
     h1 {
         font-size:2.7em;
         line-height:1.4em;
     }
-    
+
     h3 {
         font-size:1.3em;
     }
-    
+
     h1, h3 {
         color:#fff !important;
         margin:0;
         font-weight:600;
     }
-    
+
 }
 
 .featured div {
@@ -123,7 +123,7 @@
     h3 {
     	padding-top: 0.5em;
     }
-    
+
 }
 
 
@@ -147,6 +147,13 @@ blockquote:before {
 blockquote p {
   display: inline !important;
 }
+
+
+
+
+.site-title {
+    display: inline-block !important;
+ }
 
 #site-version {
     text-transform: lowercase;
